Prevent address bar being hidden on mobile to avoid scrolling bug

--- a/app/assets/stylesheets/sephora_style_guide/app/base.scss
+++ b/app/assets/stylesheets/sephora_style_guide/app/base.scss
@@ -8,6 +8,7 @@ body {
 }
 
 .container-fluid {
+  height: 100%;
   padding: 0;
 }
 
@@ -171,7 +172,7 @@ pre {
 }
 
 .disable-scroll {
-  overflow: hidden;
+  position: fixed;  // prevent address bar being hidden on mobile
 }
 
 [v-cloak] {
